test/langtools/tools/javac/resolve/MethodAmbiguityCrash2.out
MethodAmbiguityCrash2.java:23:18: compiler.err.cant.ref.before.ctor.called: op()
1 error
